--- a/.github/workflows/_build_upload_pokedex_workflow.yaml
+++ b/.github/workflows/_build_upload_pokedex_workflow.yaml
@@ -110,7 +110,7 @@ jobs:
           CREDENTIALS_JSON=$(echo "$CREDENTIALS_JSON" | sed 's/"/\\"/g')
             
           # Wrap in double quotes and output as valid JSON
-          echo "{\"FIREBASE_CREDENTIALS\": \"$CREDENTIALS_JSON\"}" > ../data/firebase/service_account.json
+          echo "$CREDENTIALS_JSON" > ../data/firebase/service_account.json
             
           # Display the converted JSON for verification
           cat ../data/firebase/service_account.json
