--- a/.github/workflows/_build_upload_pokedex_workflow.yaml
+++ b/.github/workflows/_build_upload_pokedex_workflow.yaml
@@ -32,20 +32,20 @@ jobs:
         with:
           sdk: ${{ env.DART_SDK_VERSION }}
 
-      #- name: Format the Dart code
-      #  run: dart format . --set-exit-if-changed
+      - name: Format the Dart code
+        run: dart format . --set-exit-if-changed
 
-      #- name: Run the code generators
-      #  run: dart run build_runner build --delete-conflicting-outputs
+      - name: Run the code generators
+        run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Install dependencies for pokedex_builder
         run: dart pub get
 
-      #- name: Statically analyze the Dart code
-      #  run: dart analyze
+      - name: Statically analyze the Dart code
+        run: dart analyze
 
-      #- name: Run the unit tests
-      #  run: dart test --file-reporter "json:test-results.json"
+      - name: Run the unit tests
+        run: dart test --file-reporter "json:test-results.json"
 
   test_firestore_file_uploader:
     runs-on: ubuntu-latest
@@ -63,24 +63,24 @@ jobs:
         with:
           sdk: ${{ env.DART_SDK_VERSION }}
 
-      #- name: Format the Dart code
-      #  run: dart format . --set-exit-if-changed
+      - name: Format the Dart code
+        run: dart format . --set-exit-if-changed
 
-      #- name: Run the code generators
-      #  run: dart run build_runner build --delete-conflicting-outputs
+      - name: Run the code generators
+        run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Install dependencies for pokedex_file_uploader
         run: dart pub get
 
-      #- name: Statically analyze the Dart code
-      #  run: dart analyze
+      - name: Statically analyze the Dart code
+        run: dart analyze
 
-      #- name: Run the unit tests
-      #  run: dart test
+      - name: Run the unit tests
+        run: dart test
 
   build_and_upload_pokedex:
     runs-on: ubuntu-latest
-    needs: [test_pokedex_builder, test_firestore_file_uploader]
+    needs: [ test_pokedex_builder, test_firestore_file_uploader ]
 
     steps:
       - name: Checkout repository
