--- a/.github/workflows/_build_upload_pokedex_workflow.yaml
+++ b/.github/workflows/_build_upload_pokedex_workflow.yaml
@@ -16,68 +16,6 @@ env:
   PATH_POKEDEX_UPLOADER: ./tools/firestore_file_uploader
 
 jobs:
-  test_pokedex_builder:
-    runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: ${{ env.PATH_POKEDEX_BUILDER }}
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Setup dart environment
-        uses: dart-lang/setup-dart@v1
-        with:
-          sdk: ${{ env.DART_SDK_VERSION }}
-
-      - name: Format the Dart code
-        run: dart format . --set-exit-if-changed
-
-      - name: Run the code generators
-        run: dart run build_runner build --delete-conflicting-outputs
-
-      - name: Install dependencies for pokedex_builder
-        run: dart pub get
-
-      - name: Statically analyze the Dart code
-        run: dart analyze
-
-      - name: Run the unit tests
-        run: dart test --file-reporter "json:test-results.json"
-
-  test_firestore_file_uploader:
-    runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: ${{ env.PATH_POKEDEX_UPLOADER }}
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Setup dart environment
-        uses: dart-lang/setup-dart@v1
-        with:
-          sdk: ${{ env.DART_SDK_VERSION }}
-
-      - name: Format the Dart code
-        run: dart format . --set-exit-if-changed
-
-      - name: Run the code generators
-        run: dart run build_runner build --delete-conflicting-outputs
-
-      - name: Install dependencies for pokedex_file_uploader
-        run: dart pub get
-
-      - name: Statically analyze the Dart code
-        run: dart analyze
-
-      - name: Run the unit tests
-        run: dart test
-
   build_and_upload_pokedex:
     runs-on: ubuntu-latest
     needs: [ test_pokedex_builder, test_firestore_file_uploader ]
@@ -91,17 +29,15 @@ jobs:
         with:
           sdk: ${{ env.DART_SDK_VERSION }}
 
-      - name: Install dependencies for pokedex_builder
-        run: dart pub get
-        working-directory: ${{ env.PATH_POKEDEX_BUILDER }}
+      - name: Setup Melos
+        run: dart pub global activate melos
+
+      - name: Test, analyse and format all CLI tools
+        run: melos cli_tool_quality
 
       - name: Fetch, build and create firestore collection json
         run: dart bin/pokedex_builder.dart build --flavor ${{ inputs.flavor }} --path ../data/firestore/pokedex.json
         working-directory: ${{ env.PATH_POKEDEX_BUILDER }}
-
-      - name: Install dependencies for pokedex_file_uploader
-        run: dart pub get
-        working-directory: ${{ env.PATH_POKEDEX_UPLOADER }}
 
       - name: Create credential json File
         run: dart bin/firestore_file_uploader.dart credential_builder --credentials ${{ secrets.FIREBASE_CREDENTIALS }} --path ../data/firebase/service_account.json
