--- a/.github/workflows/build_and_upload_pokedex.yaml
+++ b/.github/workflows/build_and_upload_pokedex.yaml
@@ -1,8 +1,6 @@
 name: Build and Upload all Pokedex every night
 
-on:
-  schedule:
-    - cron: '0 0 * * *'
+on: [push]
 
 jobs:
   build_kanto_pokedex:
