--- a/.github/workflows/_build_upload_pokedex_workflow.yaml
+++ b/.github/workflows/_build_upload_pokedex_workflow.yaml
@@ -12,6 +12,7 @@ on:
 
 env:
   DART_SDK_VERSION: 3.1.2
+  FLUTTER_VERSION: "3.13.4"
   PATH_POKEDEX_BUILDER: ./tools/pokedex_builder
   PATH_POKEDEX_UPLOADER: ./tools/firestore_file_uploader
 
@@ -26,6 +27,14 @@ jobs:
         uses: dart-lang/setup-dart@v1
         with:
           sdk: ${{ env.DART_SDK_VERSION }}
+
+      - name: Setup the flutter environment
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{env.FLUTTER_VERSION}}
+          cache: true
+          cache-key: flutter
+          cache-path: ${{ runner.tool_cache }}/flutter
 
       - name: Setup Melos
         run: |
