--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_crashlytics: ^3.3.5
   firebase_remote_config: ^4.2.5
+  flutter_native_splash: ^2.3.4
 
 dev_dependencies:
   flutter_test:
