--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -26,3 +26,10 @@ linter:
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+
+analyzer:
+  exclude:
+    - bricks/**
+  language:
+    strict-casts: true
+    strict-raw-types: true
