--- a/layers/use_case/pubspec.yaml
+++ b/layers/use_case/pubspec.yaml
@@ -1,10 +1,9 @@
 name: use_case
 description: A Flutter package used for making use cases.
-version: 0.0.1
+publish_to: 'none'
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
-  flutter: ">=1.17.0"
 
 dependencies:
   either_dart: ^1.0.0
