--- a/.github/workflows/layer_use_case.yaml
+++ b/.github/workflows/layer_use_case.yaml
@@ -33,7 +33,7 @@ jobs:
         run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Statically analyze the Dart code
-        run: dart analyze --no-current-package lib test
+        run: dart analyze lib test
 
       - name: Run unit tests
         run: dart test
