reverting the CI trigger

--- a/.github/workflows/layer_use_case.yaml
+++ b/.github/workflows/layer_use_case.yaml
@@ -1,6 +1,9 @@
 name: Analyze and test use case layer module
 
-on: push
+on:
+  push:
+    paths:
+      - layers/use_case/**
 
 env:
   DART_SDK_VERSION: 3.1.2
