--- a/layers/firebase/pubspec.yaml
+++ b/layers/firebase/pubspec.yaml
@@ -1,7 +1,6 @@
 name: firebase
-description: A new Flutter package project.
-version: 0.0.1
-homepage:
+description: A Flutter package to provide all firebase related dependencies.
+publish_to: 'none'
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
@@ -14,10 +13,10 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_crashlytics: ^3.3.5
   firebase_remote_config: ^4.2.5
+  get_it: ^7.6.4
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^2.0.0
-
-flutter:
+  lints: ^3.0.0
+  test: ^1.24.3
+  mocktail: ^0.3.0
+  build_runner: ^2.4.6
