--- a/.github/workflows/_analyze_and_test_flutter_module.yaml
+++ b/.github/workflows/_analyze_and_test_flutter_module.yaml
@@ -39,7 +39,7 @@ jobs:
         run: flutter pub get
 
       - name: Format the Dart code
-        run: flutter format . --set-exit-if-changed
+        run: dart format . --set-exit-if-changed
 
       - name: Run code generators
         run: flutter pub run build_runner build --delete-conflicting-outputs
