--- a/layers/log_reporter/pubspec.yaml
+++ b/layers/log_reporter/pubspec.yaml
@@ -8,9 +8,11 @@ environment:
 dependencies:
   get_it: ^7.6.4
   logger: ^2.0.2+1
+  firebase:
+    path: ../firebase
 
 dev_dependencies:
   lints: ^3.0.0
-  test: ^1.24.9
+  test: ^1.24.3
   mocktail: ^0.3.0
   build_runner: ^2.4.6
