--- a/.github/workflows/layer_log_reporter.yaml
+++ b/.github/workflows/layer_log_reporter.yaml
@@ -9,7 +9,7 @@ permissions:
   checks: write
 
 jobs:
-  test-and-analyze:
+  test-and-analyze_log_reporter_layer:
     uses: ./.github/workflows/_analyze_and_test_flutter_module.yaml
     with:
       module_path: './layers/log_reporter'
