renames ci names for layers

--- a/.github/workflows/layer_firebase.yaml
+++ b/.github/workflows/layer_firebase.yaml
@@ -9,7 +9,7 @@ permissions:
   checks: write
 
 jobs:
-  test-and-analyze_firebase_layer:
+  layer_firebase:
     uses: ./.github/workflows/_analyze_and_test_flutter_module.yaml
     with:
       module_path: './layers/firebase'
