--- a/layers/log_reporter/pubspec.yaml
+++ b/layers/log_reporter/pubspec.yaml
@@ -6,8 +6,12 @@ environment:
   sdk: '>=3.1.2 <4.0.0'
 
 dependencies:
-  get_it: ^7.6.4
   logger: ^2.0.2+1
+
+  core:
+    path: ../core
+  dependency_injector:
+    path: ../dependency_injector
   firebase:
     path: ../firebase
 
