--- a/layers/use_case/pubspec.yaml
+++ b/layers/use_case/pubspec.yaml
@@ -8,10 +8,14 @@ environment:
 dependencies:
   either_dart: ^1.0.0
   equatable: ^2.0.5
-  get_it: ^7.6.4
+
+  core:
+    path: ../core
+  dependency_injector:
+    path: ../dependency_injector
 
 dev_dependencies:
   lints: ^3.0.0
-  test: ^1.24.9
+  test: ^1.24.3
   mocktail: ^0.3.0
   build_runner: ^2.4.6
