--- a/.github/workflows/layer_core.yaml
+++ b/.github/workflows/layer_core.yaml
@@ -1,15 +1,16 @@
-name: Analyze and test use case layer module
+name: Run static code analysis and unit test for core module
 
 on:
   push:
     paths:
-      - layers/use_case/**
+      - layers/core/**
 
 permissions:
   checks: write
 
 jobs:
-  layer_firebase:
+  layer_core:
     uses: ./.github/workflows/_analyze_and_test_flutter_module.yaml
     with:
-      module_path: './layers/use_case'
+      module_path: './layers/core'
+
