--- a/.github/workflows/layer_firebase.yaml
+++ b/.github/workflows/layer_firebase.yaml
@@ -1,9 +1,12 @@
 name: Run static code analysis and unit test for firebase module
 
+#on:
+#  push:
+#    paths:
+#      - layers/firebase/**
+
 on:
-  push:
-    paths:
-      - layers/firebase/**
+  push
 
 permissions:
   checks: write
