--- a/.github/workflows/layer_log_reporter.yaml
+++ b/.github/workflows/layer_log_reporter.yaml
@@ -1,9 +1,12 @@
 name: Run static code analysis and unit test for log reporter module
 
+#on:
+#  push:
+#    paths:
+#      - layers/log_reporter/**
+
 on:
-  push:
-    paths:
-      - layers/log_reporter/**
+  push
 
 permissions:
   checks: write
