--- a/.github/workflows/layer_use_case.yaml
+++ b/.github/workflows/layer_use_case.yaml
@@ -1,9 +1,12 @@
 name: Analyze and test use case layer module
 
+#on:
+#  push:
+#    paths:
+#      - layers/use_case/**
+
 on:
-  push:
-    paths:
-      - layers/use_case/**
+  push
 
 permissions:
   checks: write
