--- a/layers/core/pubspec.yaml
+++ b/layers/core/pubspec.yaml
@@ -1,6 +1,5 @@
 name: core
-description: A Flutter package for core functionality of the app.
-version: 0.0.1
+description: Provides the core functionality of the app.
 publish_to: 'none'
 
 environment:
@@ -16,4 +15,5 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
+  build_runner: ^2.4.6
