--- a/layers/dependency_injector/pubspec.yaml
+++ b/layers/dependency_injector/pubspec.yaml
@@ -1,5 +1,5 @@
 name: dependency_injector
-description: A package for dependecy injection.
+description: Provides the dependency injection.
 publish_to: 'none'
 
 environment:
@@ -9,5 +9,5 @@ environment:
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.3
-  mocktail: ^0.3.0
+  mocktail: ^1.0.1
   build_runner: ^2.4.6
