--- a/layers/log_reporter/pubspec.yaml
+++ b/layers/log_reporter/pubspec.yaml
@@ -1,5 +1,5 @@
 name: log_reporter
-description: A Flutter package used for generating logs.
+description: Provides support for generating logs.
 publish_to: 'none'
 
 environment:
@@ -18,5 +18,5 @@ dependencies:
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.3
-  mocktail: ^0.3.0
+  mocktail: ^1.0.1
   build_runner: ^2.4.6
