--- a/layers/use_case/pubspec.yaml
+++ b/layers/use_case/pubspec.yaml
@@ -1,5 +1,5 @@
 name: use_case
-description: A Flutter package used for making use cases.
+description: Provides base classes for making use cases.
 publish_to: 'none'
 
 environment:
@@ -17,5 +17,5 @@ dependencies:
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.3
-  mocktail: ^0.3.0
+  mocktail: ^1.0.1
   build_runner: ^2.4.6
