--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.2 <4.0.0'
+  sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
   flutter:
@@ -18,6 +18,8 @@ dependencies:
     path: layers/core
   dependency_injector:
     path: layers/dependency_injector
+  design_system:
+    path: layers/design_system
   error_reporter:
     path: layers/error_reporter
   firebase:
