--- a/layers/core/pubspec.yaml
+++ b/layers/core/pubspec.yaml
@@ -3,14 +3,14 @@ description: Provides the core functionality of the app.
 publish_to: 'none'
 
 environment:
-  sdk: '>=3.1.2 <4.0.0'
+  sdk: '>=3.2.3 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  firebase:
-    path: ../firebase
+
+  firebase_core: ^2.24.2
 
 dev_dependencies:
   flutter_test:
