--- a/.github/workflows/layer_design_system.yaml
+++ b/.github/workflows/layer_design_system.yaml
@@ -16,4 +16,5 @@ jobs:
     uses: ./.github/workflows/_analyze_and_test_flutter_module.yaml
     with:
       module_path: './layers/design_system'
+      should_run_golden_test: 'true'
 
