--- a/.github/workflows/_analyze_and_test_flutter_module.yaml
+++ b/.github/workflows/_analyze_and_test_flutter_module.yaml
@@ -7,8 +7,8 @@ on:
         type: string
         required: true
       should_run_golden_test:
-        description: 'Should run golden tests'
-        default: 'false'
+        type: string
+        required: true
 
 env:
   DART_SDK_VERSION: 3.2.3
