--- a/melos.yaml
+++ b/melos.yaml
@@ -91,6 +91,14 @@ scripts:
     packageFilters:
       dependsOn: flutter_gen_runner
 
+  gen_sb:
+    run: dart run build_runner build --delete-conflicting-outputs && dart run build_runner build
+    description: Run file generator in Storybook.
+    exec:
+      concurrency: 1
+    packageFilters:
+      dependsOn: widgetbook_generator
+
   splash_gen:
     run: |
       flutter clean
