--- a/.github/workflows/_analyze_and_test_flutter_module.yaml
+++ b/.github/workflows/_analyze_and_test_flutter_module.yaml
@@ -51,7 +51,7 @@ jobs:
         run: flutter analyze
 
       - name: Run unit tests
-        run: flutter test --machine > test-results.json
+        run: flutter test --exclude-tags golden --machine > test-results.json
 
       - name: Generate test report
         uses: dorny/test-reporter@v1
@@ -64,7 +64,7 @@ jobs:
 
       - if: inputs.should_run_golden_test == 'true'
         name: Run golden tests
-        run: flutter test --tags 'golden' --dart-define=CI=true --machine > test-results-golden.json
+        run: flutter test --tags golden --dart-define=CI=true --machine > test-results-golden.json
 
       - if: inputs.should_run_golden_test == 'true'
         name: Generate golden test report
