--- a/.github/workflows/layer_use_case.yaml
+++ b/.github/workflows/layer_use_case.yaml
@@ -12,7 +12,7 @@ permissions:
   checks: write
 
 jobs:
-  layer_firebase:
+  layer_use_case:
     uses: ./.github/workflows/_analyze_and_test_flutter_module.yaml
     with:
       module_path: './layers/use_case'
