--- a/.github/workflows/layer_error_reporter.yaml
+++ b/.github/workflows/layer_error_reporter.yaml
@@ -1,12 +1,12 @@
 name: Run static code analysis and unit test for error reporter module
 
-#on:
-#  push:
-#    paths:
-#      - layers/error_reporter/**
-
 on:
-  push
+  push:
+    paths:
+      - layers/error_reporter/**
+
+#on:
+#  push
 
 permissions:
   checks: write
