--- a/.github/workflows/storybook_test_and_analyze.yaml
+++ b/.github/workflows/storybook_test_and_analyze.yaml
@@ -56,7 +56,7 @@ jobs:
         run: flutter analyze
 
       - name: Run unit tests
-        run: flutter test --exclude-tags 'golden' --machine > test-results.json
+        run: flutter test --exclude-tags golden --machine > test-results.json
 
       - name: Generate test report
         uses: dorny/test-reporter@v1
