--- a/.github/workflows/storybook_test_and_analyze.yaml
+++ b/.github/workflows/storybook_test_and_analyze.yaml
@@ -7,6 +7,7 @@ concurrency:
 env:
   DART_SDK_VERSION: 3.2.3
   FLUTTER_VERSION: '3.16.3'
+  PATH_STORYBOOK: ./tools/storybook
 
 #on:
 #  push:
@@ -25,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./tools/storybook
+        working-directory: ${{ env.PATH_STORYBOOK }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -65,4 +66,4 @@ jobs:
           name: Test Results
           path: test-results.json
           reporter: flutter-json
-          working-directory: ./tools/storybook
+          working-directory: ${{ env.PATH_STORYBOOK }}
