--- a/.github/workflows/storybook_website_deploy.yaml
+++ b/.github/workflows/storybook_website_deploy.yaml
@@ -6,6 +6,7 @@ concurrency:
 
 env:
   FLUTTER_VERSION: '3.16.3'
+  PATH_STORYBOOK: ./tools/storybook
 
 on:
   schedule:
@@ -23,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./tools/storybook
+        working-directory: ${{ env.PATH_STORYBOOK }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -45,5 +46,5 @@ jobs:
       - name: Deply to github pages
         uses: bluefireteam/flutter-gh-pages@v7
         with:
-          workingDir: ./tools/storybook
+          workingDir: ${{ env.PATH_STORYBOOK }}
           baseHref: /dexquiz/
