--- a/.github/workflows/storybook_test_and_analyze.yaml
+++ b/.github/workflows/storybook_test_and_analyze.yaml
@@ -58,3 +58,12 @@ jobs:
 
       - name: Run unit tests
         run: flutter test --machine > test-results.json
+
+      - name: Generate test report
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Test Results
+          path: test-results.json
+          reporter: flutter-json
+          working-directory: ${{ env.PATH_STORYBOOK }}
