--- a/.github/workflows/storybook_test_and_analyze.yaml
+++ b/.github/workflows/storybook_test_and_analyze.yaml
@@ -20,6 +20,10 @@ jobs:
   analyze-and-test-storybook:
     name: Analyze and test module
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      repository-projects: write
     defaults:
       run:
         working-directory: ${{ env.PATH_STORYBOOK }}
