--- a/.github/workflows/storybook_test_and_analyze.yaml
+++ b/.github/workflows/storybook_test_and_analyze.yaml
@@ -1,12 +1,12 @@
 name: Analyse and test Storybook
 
-#on:
-#  push:
-#    paths:
-#      - 'tools/storybook/**'
-
 on:
-  push
+  push:
+    paths:
+      - 'tools/storybook/**'
+
+#on:
+#  push
 
 jobs:
   analyze-and-test-storybook:
