--- a/layers/dependency_injector/pubspec.yaml
+++ b/layers/dependency_injector/pubspec.yaml
@@ -5,9 +5,12 @@ publish_to: 'none'
 environment:
   sdk: '>=3.2.3 <4.0.0'
 
+dependencies:
+  get_it: ^7.6.4
+  meta: ^1.10.0
 
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.3
-  mocktail: ^1.0.1
+  mocktail: ^1.0.2
   build_runner: ^2.4.6
