--- a/layers/error_reporter/pubspec.yaml
+++ b/layers/error_reporter/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  meta: any
+
   dependency_injector:
     path: ../dependency_injector
   firebase:
