--- a/layers/error_reporter/pubspec.yaml
+++ b/layers/error_reporter/pubspec.yaml
@@ -10,10 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  meta: ^1.9.1
+  meta: any
 
-  core:
-    path: ../core
   dependency_injector:
     path: ../dependency_injector
   firebase:
@@ -27,5 +25,5 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
-  mocktail: ^1.0.1
+  mocktail: ^1.0.2
   build_runner: ^2.4.6
