--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_native_splash: ^2.3.8
 
+  cache:
+    path: layers/cache
   core:
     path: layers/core
   dependency_injector:
@@ -32,8 +34,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  build_runner: ^2.4.7
   flutter_lints: ^3.0.1
   flutter_launcher_icons: ^0.13.1
+  hive_generator: ^2.0.1
   melos: ^3.4.0
 
 flutter:
